--- a/style.css
+++ b/style.css
@@ -559,6 +559,11 @@ h2 {
     .news-container {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    .news-header{
+        justify-content: center;
+        gap: 9rem;
+    }
 }
 
 /* Full Section Container */
@@ -914,6 +919,7 @@ padding: 40px 50px;
         width: 50%;
     }
     .events-header{
+        justify-content: center;
         /* justify-content: space-between; */
         gap: 5rem;
     }
@@ -927,6 +933,10 @@ padding: 40px 50px;
     }
     .events-left-container{
         margin: 2px;
+    }
+    .header{
+        justify-content: center;
+        
     }
     .header > h2{
         margin-left: .2px;
