--- a/style.css
+++ b/style.css
@@ -843,6 +843,12 @@ padding: 40px 50px;
         justify-content: space-around;
     }
     header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        /* padding: 15px 40px; */
+        /* background: linear-gradient(to right, rgba(255, 250, 237, 1) 50%, #f4c400 50%); */
+        height: 50px;
         background: rgba(255, 250, 237, 1);
     }
     .logo > Img{
